--- a/src/resources/views/admin/employee/index.ejs
+++ b/src/resources/views/admin/employee/index.ejs
@@ -2,7 +2,7 @@
     <div class="admin__main-heading">
         <p>Employees</p>
         <div>
-            <a href="" class="admin__main-btn admin__main-delete btn-check-apply" style="opacity: 0;">
+            <a href="" class="admin__main-btn admin__main-delete btn-check-apply" style="display: none;">
                 <i class='bx bx-trash'></i>
             </a>
             <a href="/administration/employee/create" class="admin__main-btn admin__main-create">
@@ -20,7 +20,7 @@
                                 <input class="form-check-input" type="checkbox" value="" id="checkAll">
                             </div>
                         </th>
-                        <th>#</th>
+                        <th>ID</th>
                         <th>Name</th>
                         <th>Phone Number</th>
                         <th>Role</th>
@@ -35,7 +35,7 @@
                                     <input class="form-check-input" name="Ids[]" type="checkbox" value="<%= employee._id %>">
                                 </div>
                             </td>
-                            <td><%= (employee._id.toString()).slice(-5) %></td>
+                            <td><%= (employee._id.toString()).slice(-10) %></td>
                             <td>
                                 <div class="admin__main-user">
                                     <img src="<%= employee.image %>" alt="">
@@ -164,10 +164,10 @@
     function renderCheckSubmitBtn(){
         var checkedCount = document.querySelectorAll('input[name="Ids[]"]:checked').length;
         if(checkedCount > 0 ){
-            btnApply.style.opacity = 1;
+            btnApply.style.display = 'inline-flex';
         }
         else{
-            btnApply.style.opacity = 0;
+            btnApply.style.display = 'none';
         }
     }
 </script>
