--- a/src/resources/views/admin/patient/details.ejs
+++ b/src/resources/views/admin/patient/details.ejs
@@ -38,11 +38,29 @@
                 <input type="email" class="profile__main-input" id="email" name="email" disabled value="<%= patient.email %>" >
             </div>
             <div class="profile__main-item">
-                <label for="address" class="profile__main-label">Địa chỉ</label>
-                <input type="text" class="profile__main-input" id="address" name="address" disabled value="<%= patient.address %>">
+                <label for="building" class="profile__main-label">Địa chỉ</label>
+                <div class="profile__main-item--address">
+                    <div>
+                        <input type="text" class="profile__main-input" id="building" name="building" value="<%= patient.address.building %>" placeholder="Số nhà, đường, khu phố" style="width:100%" disabled>
+                    </div>
+                    <div>
+                        <select name="city" id="select-city" class="profile__main-input" style="width:100%" disabled>
+                            <option></option>
+                            <% provinces.forEach(function(province, index){%>
+                                <option value="<%= province.name %>"><%= province.name %></option>
+                            <%})%>
+                        </select>
+                    </div>
+                    <div>
+                        <select name="district" id="select-district" class="profile__main-input" style="width:100%" disabled></select>
+                    </div>
+                    <div>
+                        <select name="ward" id="select-ward" class="profile__main-input" style="width:100%" disabled></select>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </main>
 
-
+<%- include('../partials/select2_patient') -%>
